Add /ingredients endpoint